add answerActivity on swagger
