# src/app/routes/answerActivity/index.ts
@@ -1,20 +1,0 @@
-import { Router } from 'express';
-import authStudent from '../../middlewares/auth/authStudent';
-import authTeacher from '../../middlewares/auth/authTeacher';
-import AnswerActivityController from '../../module/AnswerActivity/Controller';
-
-const newAnswerActivityRouter = Router();
-
-newAnswerActivityRouter.post(
-  '/registerAnswer/:activityId',
-  authStudent,
-  AnswerActivityController.store,
-);
-newAnswerActivityRouter.patch(
-  '/replyActivityOfStudent/:activityId/:answerId/:studentId',
-  authTeacher,
-  AnswerActivityController.replyAnswerOfStudent,
-);
-newAnswerActivityRouter.get('/getAllAnswerAcitivityOfStudent/:studentId', authTeacher, AnswerActivityController.getAllAnswerActivityOfStudent);
-
-export default newAnswerActivityRouter;
