# src/app/routes/index.ts
@@ -1,5 +1,4 @@
 import { Router } from 'express';
-import newAnswerActivityRouter from './answerActivity';
 import redisRoutes from './redis/redis.routes';
 import activityRouter from './activity.routes';
 import registerRouter from './register.routes';
@@ -9,6 +8,7 @@ import userRouter from './user.routes';
 import subjectRouter from './subject.routes';
 import studentRouter from './student.routes';
 import draftRouter from './draft.routes';
+import answerActivityRouter from './answerActivity.routes';
 
 const routes = Router();
 
@@ -17,7 +17,7 @@ routes.use('/api', subjectRouter);
 routes.use('/api', staticRouter);
 routes.use('/api', authRouter);
 routes.use('/api', activityRouter);
-routes.use('/api', newAnswerActivityRouter);
+routes.use('/api', answerActivityRouter);
 routes.use('/api', draftRouter);
 routes.use('/api', userRouter);
 routes.use('/api', studentRouter);
